# partsarrival

./: .env-example  .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile  LICENSE  Pipfile  Procfile  README.md  RELEASE.md  announcement.md  bitbucket-pipelines.yml  coverage.sh  envsample.txt  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  releasenote.md  releasenote.txt  requirements.txt  tox.ini
.github/workflows/: codeql-analysis.yml
frontend/: README.md  index.html  package-lock.json  package.json
parts/app/accounts/: admin.py  apps.py  forms.py  models.py  urls.py
parts/app/advisor/: admin.py  apps.py  models.py  serializers.py  urls.py
parts/app/arrival/: admin.py  apps.py  models.py  serializers.py  urls.py
parts/app/dashboard/: apps.py  urls.py  views.py
parts/app/forms/: advisor_forms.py  arrival_form.py  auth_forms.py  baseform.py  item_class_form.py  partsnumber_form.py
parts/app/home/: urls.py
parts/app/mixins/: action_mixins.py  common_mixins.py  useraccount_mixins.py
parts/app/models/: timestamp.py
parts/app/partsnumber/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py
parts/app/tests/: base.py  factories.py
parts/app/views/: accounts.py  advisor.py  home.py  (+4 more)
parts/config/: configurations.py  urls.py  wsgi.py
parts/core/: __init__.py  forms.py  managers.py  mixins.py  models.py  util.py  validators.py
parts/frontend/: package-lock.json  package.json
parts/templates/: 400.html  403.html  404.html  500.html
parts/templatetag/: check_users.py
parts/utils/: util.py
(+122 files in other folders)
